[package]
author = "dev_a_loper"
description = "a simple cli tool which watches on output of one command overtime, on differences it will run another comamnd"
edition = "2021"
license = "GPL-3.0"
name = "diff-checker"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
clearscreen = "1.0.9"
colored = "2.0.0"
duration-str = "0.3.9"
